ubuntu-release-upgrader (1:17.04.3) UNRELEASED; urgency=medium

  * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported
    metapkgs. (LP: #1632665)

 -- Brian Murray <brian@ubuntu.com>  Mon, 24 Oct 2016 14:00:59 -0700

ubuntu-release-upgrader (1:17.04.2) zesty; urgency=medium

  * DistUpgrade/ReleaseNotesViewerWebkit.py: fix indentation of function
    _on_navigation_policy_decision_requested. (LP: #1635155)

 -- Brian Murray <brian@ubuntu.com>  Fri, 21 Oct 2016 00:55:46 -0700

ubuntu-release-upgrader (1:17.04.1) zesty; urgency=medium

  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
    DistUpgrade/DistUpgrade/window_main.ui,
    data/gtkbuilder/DistUpgrade.ui,
    data/DistUpgrade.cfg,
    pre-build.sh:
    - updated for 16.10 -> 17.04

 -- Brian Murray <brian@ubuntu.com>  Thu, 20 Oct 2016 05:56:37 -0700

ubuntu-release-upgrader (1:16.10.6) yakkety; urgency=medium

  * DistUpgradeViewNonInteractive.py: When handling an exception also log what
    the traceback causing the exception was.  (LP: #1632047)

 -- Brian Murray <brian@ubuntu.com>  Mon, 10 Oct 2016 11:05:13 -0700

ubuntu-release-upgrader (1:16.10.5) yakkety; urgency=medium

  * DistUpgradeViewNonInteractive.py: Instead of tripping over errors when
    writing progress to stdout just ignore them so that the upgrade can
    continue. (LP: #1614576)

 -- Brian Murray <brian@ubuntu.com>  Wed, 05 Oct 2016 10:40:39 -0700

ubuntu-release-upgrader (1:16.10.4) yakkety; urgency=medium

  [ Brian Murray ]
  * DistUpgradeController.py: fix UnboundLocalError - thanks to Launchpad user
    MissionSix for the patch.  (LP: #1611470)
  * po/POTFILES.in: use check_new_release_gtk.py to allow for fuzzy
    translations.

  [ Dimitri John Ledkov ]
  * Mirgrate to using apt-key, instead of gpg/gpgv directly to gain
    support for apt-secure trustedparts (key fragments in
    /etc/apt/trusted.gpg.d). (LP: #1628415)

 -- Brian Murray <brian@ubuntu.com>  Mon, 03 Oct 2016 16:09:42 -0700
