@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:17.04.3) UNRELEASED; urgency=medium
 
   * data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported
     metapkgs. (LP: #1632665)
+  * data/DistUpgradeQuirks.py: configure the quirk which installs the linux
+    metapackage to run for every release upgrade. (LP: #1633903)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 24 Oct 2016 14:00:59 -0700
 
